# sunsponge

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  README.md  phase1-brief.md  phase2-brief.md  phase3-brief.md  phase4-brief.md  pyproject.toml  requirements.txt  research-brief.md  research-findings.md
.claude/: launch.json
.github/workflows/: windows-installer.yml
evidence/capture-api/: 01-post-capture.json  02-get-status.json  SUMMARY.md  job-manifest.json
evidence/fx-sunsponge/: probe-bad-manifest.json  probe-bad-map.json  probe-empty-urls.json  probe-map-final.json  probe-map-job.json  probe-not-a-url.json  probe-valid-url-final.json  probe-valid-url.json  pytest-output.txt  summary.md
evidence/pt-sunsponge/: 500-traceback.json  500-traceback.md  bad-final.json  bad-job.json  health.json  large-final.json  large-job.json  large-map-job.json  map-final.json  map-job.json  multi-1-final.json  multi-1-job.json  multi-2-final.json  multi-2-job.json  multi-3-final.json  multi-3-job.json  server.log.clean  single-final.json  (+4 more)
packaging/: desktop.py  installer.iss  sunsponge.spec
reports/: fx-sunsponge.md  pressure-sunsponge.md
scripts/: bench_ling_pilot.py  capture_plans_canvas.py  capture_url.py  demo_map_plan.py  smoke_capture.py
site/: index.html
tests/: test_capture_service.py  test_demo_ai.py  test_demo_engine.py  test_demo_mcp.py  test_paste_map.py  test_pathway_map.py  test_release_blockers.py  test_ssrf_guard.py  test_v1_capture_api.py
ui/: RestedCaptureView.jsx  api.js  icons.js  index.html  sunsponge.css
viewer/: demo-viewer.html
(+15 files in other folders)
